--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+autopep8==2.0.3
 colorama==0.4.6
 customtkinter==5.1.2
 darkdetect==0.8.0
+emoji==2.8.0
 isort==5.12.0
+packaging==23.1
 Pillow==9.5.0
+pycodestyle==2.11.0
